# isopod-rs

./: Cargo.toml  README.md
derive/: Cargo.toml
derive/src/: lib.rs
examples/demo_scene/: dragon_shader.txt  floor_shader.txt  main.rs
examples/offscreen/: main.rs
examples/triangle/: main.rs  shader.txt
src/: lib.rs  math.rs  util.rs
src/console/: mod.rs
src/gfx/: attribute.rs  draw.rs  gpu_texture.rs  material.rs  mesh.rs  mod.rs  resource.rs  shader.rs  texture.rs  texture_data.rs  uniform.rs  util.rs
src/gfx/backend/: mod.rs
src/gfx/backend/vulkan/: buffer.rs  ctx.rs  frame_resources.rs  image.rs  mesh.rs  mod.rs  pipeline.rs  render.rs  surface.rs  util.rs
src/gltf/: json.rs  mod.rs
src/input/: key.rs  mod.rs
src/res/: mod.rs
