[package]
name = "isopod-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "isopod"

[dependencies]
# proc macros
isopod_derive = { path = "derive" }

# window management + input
sdl2 = "0.37.0"

# vulkan rendering api
ash = {version = "0.38.0", features = ["linked"]}
vk-mem = "0.4.0"

# shader translation
naga = {version = "=24.0.0", features = ["glsl-in", "spv-out"]}

# bytemuck
bytemuck = {version = "1.22.0", features = ["derive"]}

# serilization
ron = "0.9.0"
serde = {version = "1.0.219", features = ["derive"]}

# all errors are strings
anyhow = "1.0.95"

# math/linear alegebra
glam = { version = "0.29.2", features = ["bytemuck"]}

# enum tools
strum = "0.27"
strum_macros = "0.27"

# fast hashmaps
rustc-hash = "2.1.1"

# png images
png = "0.17.16"

# macro tools
paste = "1.0"