[package]
name = "isopod-rs"
version = "0.1.0"
edition = "2021"

[lib]
name = "isopod"

[dependencies]
# proc macros + macro tools
isopod_derive = { path = "derive" }
paste = "1.0"

# window management + input
sdl2 = "0.37.0"

# vulkan rendering api
ash = {version = "0.38.0", features = ["linked"]}
vk-mem = "0.4.0"

# shader translation
naga = {version = "=24.0.0", features = ["glsl-in", "spv-out"]}

# bytemuck
bytemuck = {version = "1.22.0", features = ["derive"]}

# serilization
ron = "0.9.0"
serde_json = "1.0"
serde = {version = "1.0.219", features = ["derive"]}

# errors
anyhow = "1.0.95"
thiserror = "2.0.11"

# math/linear alegebra
glam = { version = "0.29.2", features = ["bytemuck"]}

# enum tools
strum = "0.27"
strum_macros = "0.27"

# fast hashmaps
# this should match the version used in `mlua`
rustc-hash = "2.1.1"

# png images
png = "0.17.16"

# cell types
qcell = "0.5.4"

# luau scripting language
mlua = {version = "0.10.3", features = ["luau"]}